Achiements no longer overlap

--- a/src/styles.css
+++ b/src/styles.css
@@ -64,6 +64,7 @@ footer a {
   margin: 5px;
   float: left;
   cursor: default;
+  width: 60%;
 }
 
 #codeBox {
